--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributeExternalEditorItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributeExternalEditorItemRenderer.mxml
@@ -4,7 +4,7 @@
 				xmlns:mx="library://ns.adobe.com/flex/halo"
 				xmlns:externalEditor="net.vdombox.ide.modules.wysiwyg.view.components.externalEditor.*"
 				
-				height="21">
+				minHeight="21" width="100%">
 
 	<fx:Script>
 		<![CDATA[
@@ -91,15 +91,16 @@
 	</fx:Script>
 
 	<s:layout>
-
-		<s:HorizontalLayout gap="0" />
+		
+		<s:HorizontalLayout verticalAlign="middle"
+							gap="0" />
 	</s:layout>
 
 	<s:RichText id="nameLabel"
-				height="100%" text="{ _attributeDescriptionVO.displayName }" width="138"
-				paddingRight="5" textAlign="right" verticalAlign="middle" />
+				minHeight="21" text="{ _attributeDescriptionVO.displayName }" width="100%"
+				paddingBottom="2" paddingRight="5" paddingTop="2" textAlign="right" verticalAlign="middle" />
 
 	<externalEditor:ExternalEditor id="valueField"
-								   height="100%" value="@{ _attributeVO.value }" width="110"
+								   height="21" value="@{ _attributeVO.value }" width="90"
 								   textAlign="left" />
 </s:ItemRenderer>
