--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributeObjectlistItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/AttributeObjectlistItemRenderer.mxml
@@ -3,6 +3,7 @@
 				xmlns:s="library://ns.adobe.com/flex/spark"
 				xmlns:mx="library://ns.adobe.com/flex/halo"
 				
+				minHeight="21" width="100%"
 				creationComplete="creationCompleteHandler()">
 
 	<fx:Script>
@@ -12,7 +13,7 @@
 			import mx.collections.SortField;
 			import mx.events.ListEvent;
 			import mx.events.ValidationResultEvent;
-			
+
 			import net.vdombox.ide.common.vo.AttributeDescriptionVO;
 			import net.vdombox.ide.common.vo.AttributeVO;
 			import net.vdombox.ide.common.vo.ObjectListVO;
@@ -115,7 +116,7 @@
 
 				return colorGroup;
 			}
-			
+
 			protected function valueField_changeHandler( event : ListEvent ) : void
 			{
 				_attributeVO.value = valueField.selectedItem.id;
@@ -125,15 +126,16 @@
 
 	<s:layout>
 
-		<s:HorizontalLayout gap="0" />
+		<s:HorizontalLayout verticalAlign="middle"
+							gap="0" />
 	</s:layout>
 
 	<s:RichText id="nameLabel"
-				height="100%" minWidth="70" text="{ _attributeDescriptionVO.displayName }" width="138"
-				paddingRight="5" textAlign="right" verticalAlign="middle" />
+				minHeight="21" text="{ _attributeDescriptionVO.displayName }" width="100%"
+				paddingBottom="2" paddingRight="5" paddingTop="2" textAlign="right" verticalAlign="middle" />
 
 	<mx:ComboBox id="valueField"
-				 height="100%" labelField="name" minWidth="10" width="110"
+				 height="21" labelField="name" minWidth="10" width="90"
 				 textAlign="left"
 				 change="valueField_changeHandler( event )" />
 </s:ItemRenderer>
