--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/externalEditor/ExternalEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/externalEditor/ExternalEditor.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml"
 		 
-		 height="20" width="100"
+		 height="20" width="100%"
 		 borderColor="#FFFFFF" borderStyle="solid" horizontalAlign="right" verticalAlign="middle">
 
 	<mx:Script>
@@ -15,12 +15,12 @@
 			{
 				return _resourceID;
 			}
-			
+
 			public function set resourceID( value : String ) : void
 			{
 				_resourceID = value;
 			}
-			
+
 			[Bindable]
 			public function get value() : String
 			{
@@ -35,7 +35,7 @@
 	</mx:Script>
 
 	<mx:Label id="lbl"
-			  text="External" width="70" />
+			  text="External" />
 
 	<mx:Button height="19" label="..." width="22"
 			   cornerRadius="0" paddingLeft="2" paddingRight="2"
