--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PanelSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PanelSkin.mxml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!--
 
-ADOBE SYSTEMS INCORPORATED
-Copyright 2008 Adobe Systems Incorporated
-All Rights Reserved.
+	 ADOBE SYSTEMS INCORPORATED
+	 Copyright 2008 Adobe Systems Incorporated
+	 All Rights Reserved.
 
-NOTICE: Adobe permits you to use, modify, and distribute this file
-in accordance with the terms of the license agreement accompanying it.
+	 NOTICE: Adobe permits you to use, modify, and distribute this file
+	 in accordance with the terms of the license agreement accompanying it.
 
 -->
+<!--- The default skin class for a Spark Panel container.
 
-<!--- The default skin class for a Spark Panel container.  
-
-@langversion 3.0
-@playerversion Flash 10
-@playerversion AIR 1.5
-@productversion Flex 4
+	 @langversion 3.0
+	 @playerversion Flash 10
+	 @playerversion AIR 1.5
+	 @productversion Flex 4
 -->
-<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" alpha.disabled="0.5"
-			 blendMode="normal" mouseEnabled="false" minWidth="131" minHeight="127">
-	
+<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
+			 xmlns:s="library://ns.adobe.com/flex/spark"
+			 
+			 minHeight="127" minWidth="131"
+			 alpha.disabled="0.5" blendMode="normal" mouseEnabled="false">
+
 	<fx:Metadata>
 		<![CDATA[ 
 		/** 
@@ -28,21 +29,24 @@ in accordance with the terms of the license agreement accompanying it.
 		*/
 		[HostComponent("spark.components.Panel")]
 		]]>
-	</fx:Metadata> 
-	
+	</fx:Metadata>
+
 	<fx:Script>
-		/* Define the skin elements that should not be colorized. 
-		For panel, border and title backround are skinned, but the content area and title text are not. */
-		static private const exclusions:Array = ["background", "titleDisplay", "contentGroup"];
-		
-		/** 
+		/* Define the skin elements that should not be colorized.
+		 For panel, border and title backround are skinned, but the content area and title text are not. */
+		static private const exclusions : Array = [ "background", "titleDisplay", "contentGroup" ];
+
+		/**
 		 * @copy spark.skins.SparkSkin#colorizeExclusions
-		 */     
-		override public function get colorizeExclusions():Array {return exclusions;}
-		
-		override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number):void
+		 */
+		override public function get colorizeExclusions() : Array
 		{
-			if (getStyle("borderVisible") == true)
+			return exclusions;
+		}
+
+		override protected function updateDisplayList( unscaledWidth : Number, unscaledHeight : Number ) : void
+		{
+			if ( getStyle( "borderVisible" ) == true )
 			{
 				border.visible = true;
 				background.left = background.top = background.right = background.bottom = 1;
@@ -54,175 +58,219 @@ in accordance with the terms of the license agreement accompanying it.
 				background.left = background.top = background.right = background.bottom = 0;
 				contents.left = contents.top = contents.right = contents.bottom = 0;
 			}
-			
-			dropShadow.visible = getStyle("dropShadowVisible");
-			
-			var cr:Number = getStyle("cornerRadius");
-			
-			if (cornerRadius != cr)
+
+			dropShadow.visible = getStyle( "dropShadowVisible" );
+
+			var cr : Number = getStyle( "cornerRadius" );
+
+			if ( cornerRadius != cr )
 				cornerRadius = cr;
-			
-			super.updateDisplayList(unscaledWidth, unscaledHeight);
+
+			super.updateDisplayList( unscaledWidth, unscaledHeight );
 		}
-		
+
 		[Bindable]
-		public var cornerRadius:Number;
+		public var cornerRadius : Number;
 	</fx:Script>
-	
+
 	<s:states>
+
 		<s:State name="normal" />
+
 		<s:State name="disabled" />
+
 		<s:State name="normalWithControlBar" stateGroups="withControls" />
+
 		<s:State name="disabledWithControlBar" stateGroups="withControls" />
 	</s:states>
-	
 	<!-- drop shadow can't be hittable so it stays sibling of other graphics -->
-	<s:RectangularDropShadow id="dropShadow" blurX="20" blurY="20" alpha="0.32" distance="11" 
-							 angle="90" color="#000000" left="0" top="0" right="0" bottom="0" 
-							 tlRadius="{cornerRadius}" trRadius="{cornerRadius}"
-							 blRadius="0" blRadius.withControls="{cornerRadius}"
-							 brRadius="0" brRadius.withControls="{cornerRadius}" />
-	
+
+	<s:RectangularDropShadow id="dropShadow"
+							 bottom="0" color="#000000" left="0" right="0" top="0"
+							 alpha="0.32" angle="90" blRadius="0" blRadius.withControls="{cornerRadius}"
+							 blurX="20" blurY="20" brRadius="0" brRadius.withControls="{cornerRadius}"
+							 distance="11" tlRadius="{cornerRadius}" trRadius="{cornerRadius}" />
 	<!-- drop shadow can't be hittable so all other graphics go in this group -->
-	<s:Group left="0" right="0" top="0" bottom="0">
-		
+
+	<s:Group bottom="0" left="0" right="0" top="0">
 		<!-- top group mask -->
-		<s:Group left="1" top="1" right="1" bottom="1" id="topGroupMask" >
-			<s:Rect left="0" top="0" right="0" bottom="0"
-					topLeftRadiusX="{cornerRadius}" topRightRadiusX="{cornerRadius}"
+
+		<s:Group id="topGroupMask"
+				 bottom="1" left="1" right="1" top="1">
+
+			<s:Rect bottom="0" left="0" right="0" top="0"
 					bottomLeftRadiusX.withControls="{cornerRadius}"
-					bottomRightRadiusX.withControls="{cornerRadius}">
+					bottomRightRadiusX.withControls="{cornerRadius}" topLeftRadiusX="{cornerRadius}"
+					topRightRadiusX="{cornerRadius}">
+
 				<s:fill>
-					<s:SolidColor alpha="0"/>
+
+					<s:SolidColor alpha="0" />
 				</s:fill>
 			</s:Rect>
 		</s:Group>
-		
 		<!-- bottom group mask -->
-		<s:Group left="1" top="1" right="1" bottom="1" id="bottomGroupMask" 
+
+		<s:Group id="bottomGroupMask"
+				 bottom="1" left="1" right="1" top="1"
 				 includeIn="normalWithControlBar, disabledWithControlBar">
-			<s:Rect left="0" top="0" right="0" bottom="0"
-					topLeftRadiusX="{cornerRadius}" topRightRadiusX="{cornerRadius}"
+
+			<s:Rect bottom="0" left="0" right="0" top="0"
 					bottomLeftRadiusX.withControls="{cornerRadius}"
-					bottomRightRadiusX.withControls="{cornerRadius}">
+					bottomRightRadiusX.withControls="{cornerRadius}" topLeftRadiusX="{cornerRadius}"
+					topRightRadiusX="{cornerRadius}">
+
 				<s:fill>
-					<s:SolidColor alpha="0"/>
+
+					<s:SolidColor alpha="0" />
 				</s:fill>
 			</s:Rect>
 		</s:Group>
-		
 		<!-- layer 1: border -->
-		<s:Rect id="border" left="0" right="0" top="0" bottom="0"
-				topLeftRadiusX="{cornerRadius}" topRightRadiusX="{cornerRadius}"
+
+		<s:Rect id="border"
+				bottom="0" left="0" right="0" top="0"
 				bottomLeftRadiusX.withControls="{cornerRadius}"
-				bottomRightRadiusX.withControls="{cornerRadius}" >
+				bottomRightRadiusX.withControls="{cornerRadius}" topLeftRadiusX="{cornerRadius}"
+				topRightRadiusX="{cornerRadius}">
+
 			<s:stroke>
-				<s:SolidColorStroke color="{getStyle('borderColor')}" alpha="{getStyle('borderAlpha')}" weight="1" />
+
+				<s:SolidColorStroke color="{getStyle('borderColor')}"
+									alpha="{getStyle('borderAlpha')}" weight="1" />
 			</s:stroke>
 		</s:Rect>
-		
 		<!-- layer 2: background fill -->
 		<!--- Defines the appearance of the PanelSkin class's background. -->
-		<s:Rect id="background" left="1" top="1" right="1" bottom="1"
-				topLeftRadiusX="{cornerRadius}" topRightRadiusX="{cornerRadius}"
+
+		<s:Rect id="background"
+				bottom="1" left="1" right="1" top="1"
 				bottomLeftRadiusX.withControls="{cornerRadius}"
-				bottomRightRadiusX.withControls="{cornerRadius}">
+				bottomRightRadiusX.withControls="{cornerRadius}" topLeftRadiusX="{cornerRadius}"
+				topRightRadiusX="{cornerRadius}">
+
 			<s:fill>
 				<!-- Defines the  PanelSkin class's background fill. The default color is 0xFFFFFF. -->
+
 				<s:SolidColor color="{getStyle('backgroundColor')}"
 							  alpha="{getStyle('backgroundAlpha')}" />
 			</s:fill>
 		</s:Rect>
-		
 		<!-- layer 3: contents -->
 		<!--- contains the vertical stack of titlebar content and controlbar -->
-		<s:Group left="1" right="1" top="1" bottom="1" id="contents">
+
+		<s:Group id="contents"
+				 bottom="1" left="1" right="1" top="1">
+
 			<s:layout>
-				<s:VerticalLayout gap="0" horizontalAlign="justify" />
+
+				<s:VerticalLayout horizontalAlign="justify"
+								  gap="0" />
 			</s:layout>
-			
-			<s:Group id="topGroup" mask="{topGroupMask}">
-				
+
+			<s:Group id="topGroup"
+					 mask="{topGroupMask}">
 				<!-- layer 0: title bar fill -->
-				<s:Rect id="tbFill" left="0" right="0" top="0" bottom="1">
+
+				<s:Rect id="tbFill"
+						bottom="1" left="0" right="0" top="0">
+
 					<s:fill>
+
 						<s:LinearGradient rotation="90">
+
 							<s:GradientEntry color="0x46494E" />
+
 							<s:GradientEntry color="0x000000" />
 						</s:LinearGradient>
 					</s:fill>
 				</s:Rect>
-				
 				<!-- layer 1: title bar highlight -->
 				<!--<s:Rect id="tbHilite" left="0" right="0" top="0" bottom="0">
-					<s:stroke>
-						<s:LinearGradientStroke rotation="90" weight="1">
-							<s:GradientEntry color="0xEAEAEA" />
-							<s:GradientEntry color="0xD9D9D9" />
-						</s:LinearGradientStroke>
-					</s:stroke>
-				</s:Rect>-->
-				
+					 <s:stroke>
+					 <s:LinearGradientStroke rotation="90" weight="1">
+					 <s:GradientEntry color="0xEAEAEA" />
+					 <s:GradientEntry color="0xD9D9D9" />
+					 </s:LinearGradientStroke>
+					 </s:stroke>
+					 </s:Rect>-->
 				<!-- layer 2: title bar divider -->
 				<!--<s:Rect id="tbDiv" left="0" right="0" height="1" bottom="0">
-					<s:fill>
-						<s:SolidColor color="0xC0C0C0" />
-					</s:fill>
-				</s:Rect>-->
-				
+					 <s:fill>
+					 <s:SolidColor color="0xC0C0C0" />
+					 </s:fill>
+					 </s:Rect>-->
 				<!-- layer 3: text -->
 				<!--- Defines the appearance of the PanelSkin class's title bar. -->
-				<s:Label id="titleDisplay" maxDisplayedLines="1"
-						 left="9" right="3" top="1" bottom="0" minHeight="23"
-						 verticalAlign="middle" fontWeight="bold">
+
+				<s:Label id="titleDisplay"
+						 minHeight="23"
+						 bottom="0" color="white" left="3" right="3" textAlign="center"
+						 top="1" verticalAlign="middle"
+						 maxDisplayedLines="1">
 				</s:Label>
 			</s:Group>
-			
 			<!--
-			Note: setting the minimum size to 0 here so that changes to the host component's
-			size will not be thwarted by this skin part's minimum size.   This is a compromise,
-			more about it here: http://bugs.adobe.com/jira/browse/SDK-21143
+				 Note: setting the minimum size to 0 here so that changes to the host component's
+				 size will not be thwarted by this skin part's minimum size.   This is a compromise,
+				 more about it here: http://bugs.adobe.com/jira/browse/SDK-21143
 			-->
-			<s:Group id="contentGroup" width="100%" height="100%" minWidth="0" minHeight="0">
+
+			<s:Group id="contentGroup"
+					 height="100%" minHeight="0" minWidth="0" width="100%">
 			</s:Group>
-			
-			<s:Group id="bottomGroup" minWidth="0" minHeight="0"
-					 includeIn="normalWithControlBar, disabledWithControlBar" >
-				
-				<s:Group left="0" right="0" top="0" bottom="0" mask="{bottomGroupMask}">
-					
+
+			<s:Group id="bottomGroup"
+					 minHeight="0" minWidth="0"
+					 includeIn="normalWithControlBar, disabledWithControlBar">
+
+				<s:Group bottom="0" left="0" right="0" top="0"
+						 mask="{bottomGroupMask}">
 					<!-- layer 0: control bar divider line -->
 					<!--<s:Rect left="0" right="0" top="0" height="1" alpha="0.22">
-						<s:fill>
-							<s:SolidColor color="0x000000" />
-						</s:fill>
-					</s:Rect>-->
-					
+						 <s:fill>
+						 <s:SolidColor color="0x000000" />
+						 </s:fill>
+						 </s:Rect>-->
 					<!-- layer 1: control bar highlight -->
-					<s:Rect left="0" right="0" top="1" bottom="0">
+
+					<s:Rect bottom="0" left="0" right="0" top="1">
+
 						<s:stroke>
+
 							<s:LinearGradientStroke rotation="90" weight="1">
+
 								<s:GradientEntry color="0xE5E5E5" />
+
 								<s:GradientEntry color="0xD8D8D8" />
 							</s:LinearGradientStroke>
 						</s:stroke>
 					</s:Rect>
-					
 					<!-- layer 2: control bar fill -->
-					<s:Rect left="1" right="1" top="2" bottom="1">
+
+					<s:Rect bottom="1" left="1" right="1" top="2">
+
 						<s:fill>
+
 							<s:SolidColor color="0xD4D4D4" />
 							<!--<s:LinearGradient rotation="90">
-								<s:GradientEntry color="0xDADADA" />
-								<s:GradientEntry color="0xC5C5C5" />
-							</s:LinearGradient>-->
+								 <s:GradientEntry color="0xDADADA" />
+								 <s:GradientEntry color="0xC5C5C5" />
+								 </s:LinearGradient>-->
 						</s:fill>
 					</s:Rect>
 				</s:Group>
 				<!-- layer 3: control bar -->
-				<s:Group id="controlBarGroup" left="0" right="0" top="1" bottom="1" minWidth="0" minHeight="0">
+
+				<s:Group id="controlBarGroup"
+						 minHeight="0" minWidth="0"
+						 bottom="1" left="0" right="0" top="1">
+
 					<s:layout>
-						<s:HorizontalLayout paddingLeft="10" paddingRight="10" paddingTop="7" paddingBottom="7" gap="10" />
+
+						<s:HorizontalLayout paddingBottom="7" paddingLeft="10" paddingRight="10"
+											paddingTop="7"
+											gap="10" />
 					</s:layout>
 				</s:Group>
 			</s:Group>
