git-svn-id: http://svn.vdombox.ru/flextools/trunk@5913 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
@@ -17,10 +17,14 @@
 				  height="100%" width="90"
 				  headerStyleName="headerStyle" />
 
-	<s:VGroup height="100%" width="100%" gap="0">
+	<s:VGroup height="100%" width="100%"
+			  gap="0">
 
 		<components:WorkArea id="workArea"
 							 height="100%" width="100%" />
+
+		<components:ToolbarPanel id="toolbarPanel"
+								 width="100%" />
 	</s:VGroup>
 
 	<s:VGroup height="100%" width="220">
