git-svn-id: http://svn.vdombox.ru/flextools/trunk@5915 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
@@ -19,6 +19,11 @@
 			skinClass : ClassReference("net.vdombox.ide.modules.wysiwyg.view.skins.ItemSkin"); 
 		}
 		
+		components|ToolbarButton
+		{
+			skinClass : ClassReference("net.vdombox.ide.modules.wysiwyg.view.skins.ToolbarButtonSkin"); 
+		}
+		
 		components|WorkArea
 		{
 			skinClass : ClassReference("net.vdombox.ide.modules.wysiwyg.view.skins.WorkAreaSkin"); 
